@@ -1,3 +1,6 @@
+2002-12-18 TADA Tadashi <sho@spc.gr.jp>
+	* whatsnew-list: adjust last modified of @diaries as whatsnew-list file.
+
 2002-12-13 TADA Tadashi <sho@spc.gr.jp>
 	* whatsnew-list: remove hidden article from the list.
 
